[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
tokio = { version = "1.36.0", features = ["full"] }
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio-rustls", "chrono", "uuid"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tower-http = { version = "0.5.2", features = ["cors", "fs"] }
dotenvy = "0.15.7"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
chrono = { version = "0.4.34", features = ["serde"] }
